--- a/selected-work/LCCRMY_v2021_04_30/index.html
+++ b/selected-work/LCCRMY_v2021_04_30/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LCCRMY_v2021_04_30 - Alexandre B A Villares</title>
+    <title>LCCRMY: a recursive random walker</title>
     <style> body, html, canvas {padding: 0; margin: 0; overflow: hidden;} </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/default.min.css">
@@ -69,7 +69,7 @@
         <b>LCCRMY_v2021_04_30 </b> by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> is part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode. Presented at the  <a href="https://pcd.encontrosdigitais.com.br/galeria/">Processsing Community Day Brasil 2021 Exhibition</a>-->
 
 <pre style="color:grey; font-size:10px">
-# LCCRMY_v2021_04_30 - Alexandre B A Villares
+# LCCRMY: a recursive random walker v2021_04_30 - Alexandre B A Villares
 # Drag the mouse to rotate. Press SPACE to generate a new one.
 
 from random import choice
@@ -151,7 +151,9 @@ def keyReleased():
 ////////////////////////// HERE!
 let sketchCode = `
 
-# LCCRMY_v2021_04_30
+# LCCRMY: a recursive random walker v2021_04_30 - Alexandre B A Villares
+# Drag the mouse to rotate. Press SPACE to generate a new one.
+
 from random import choice
 elements = []
 r = 0
