--- a/selected-work/recursive-grid/index.html
+++ b/selected-work/recursive-grid/index.html
@@ -65,7 +65,7 @@
       </div>     
     </div>
 
- <p style="font-family: 'sans'; font-size:18px; color:white"><br>
+ <p style="font-family: 'sans'; font-size:18px; color:gray"><br>
         <b>Grade recursiva 2021-01-21 </b> by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> is part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode. Presented at the  <a href="https://pcd.encontrosdigitais.com.br/galeria/">Processsing Community Day Brasil 2021 Exhibition</a>
         </p>
   </body>
