--- a/selected-work/LCCRMY_v2021_04_30/index.html
+++ b/selected-work/LCCRMY_v2021_04_30/index.html
@@ -65,10 +65,13 @@
       </div>     
     </div>
 
- <p style="font-family: 'sans'; font-size:18px; color:grey"><!--<br>
-        <b>LCCRMY_v2021_04_30 </b> by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> is part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode. Presented at the  <a href="https://pcd.encontrosdigitais.com.br/galeria/">Processsing Community Day Brasil 2021 Exhibition</a>-->
+ <p style="font-family: 'sans'; font-size:18px; color:grey">
 
-<pre style="color:grey; font-size:10px">
+<pre style="color:grey; font-size:10px" title="Da mesma forma com que muitos pintores sentem necessidade de produzir a própria tinta, artistas que produzem obras em meios digitais escrevem código, tem o software como meio. 'LCCRMY: a recursive random walker' explora duas ideias recorrentes neste meio, os caminhantes aleatórios (random walkers) e a recursividade, gerando estruturas tridimensionais com elementos repetidos em ritmos e escalas diversas. A estratégia adotada tem influência dos Sistemas de Lindenmayer (L-Systems) na composição de uma sequência de símbolos que é executada na forma de desenho, mas não  se trata de um L-System, como pode ser verificado no código-fonte que é apresentado simultaneamente à sua execução no navegador.
+
+
+In the same way that many painters feel the need to produce their own paint, artists who produce works in digital media write code, using software as a medium. 'LCCRMY: a recursive random walker' explores two recurring ideas in this medium, random walkers and recursion, generating three-dimensional structures with repeating elements in different rhythms and scales. The adopted strategy has influence from the Lindenmayer Systems (L-Systems) in the composition of a sequence of symbols that is executed in the form of a drawing, but it is not an L-System, as can be seen in the source code that is presented simultaneously to its running in the browser. 
+">
 # LCCRMY: a recursive random walker v2021_04_30 - Alexandre B A Villares
 # Drag the mouse to rotate. Press SPACE to generate a new one.
 
