atualizando descrição do trabalho em inglês

--- a/selected-work/recursive-grid/index.html
+++ b/selected-work/recursive-grid/index.html
@@ -6,23 +6,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grade recursiva 2021 - Alexandre B A Villares</title>
+    <title>Grade recursiva / Recursive grid 2021-01-21 - Alexandre B A Villares</title>
     <style> body, html, canvas {padding: 0; margin: 0; overflow: hidden;} </style>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/default.min.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+
     <script src="https://pyodide-cdn2.iodide.io/v0.15.0/full/pyodide.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.2/styles/default.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.2/highlight.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js" integrity="sha512-GZ1RIgZaSc8rnco/8CXfRdCpDxRCphenIiZ2ztLy3XQfCbQUSCuk8IudvNHxkRA3oUg6q0qejgN/qqyG1duv5Q==" crossorigin="anonymous"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/mode-python.min.js" integrity="sha512-2Ke4vMGrMfYRM55pT1aA5bw7Pl82Sc7K5Hg8XZYZu+EQrb0AO1mNYTagwZm+MFVAImYS9Mlnm73zcgc01wPXxA==" crossorigin="anonymous"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/theme-monokai.min.js" integrity="sha512-S4i/WUGRs22+8rjUVu4kBjfNuBNp8GVsgcK2lbaFdws4q6TF3Nd00LxqnHhuxS9iVDfNcUh0h6OxFUMP5DBD+g==" crossorigin="anonymous"></script>
-
-
-    <script>hljs.initHighlightingOnLoad();</script>
 
     <style>
         html {
@@ -40,8 +30,6 @@
           margin-right: 150px;
           margin-left: 150px;    
         }
-
-
 
         .display-none {display:none;}
     </style>
@@ -64,10 +52,20 @@
         <!-- You sketch will go here! -->
       </div>     
     </div>
+<span style="font-family: 'sans'; font-size:12px; color:gray">
+ <h1 title="Este trabalho se iniciou com a exploração de uma série de grades recursivas no meu projeto de um sketch por dia (sketch-a-day). O Tema/strutura da grade recursiva tem sido uma ideia favorita minha desde que a aprendi com Takawo Shunsuke (twitter.com/takawo), programador criativo do Japão, em 2019. A obra roda no seu navegador graças ao projeto pyp5js (github.com/berinhard/pyp5js) com o modo pyodide.
 
- <p style="font-family: 'sans'; font-size:18px; color:gray"><br>
-        <b>Grade recursiva 2021-01-21 </b> by <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a> is part of a series started at <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project, running on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode. Presented at the  <a href="https://pcd.encontrosdigitais.com.br/galeria/">Processsing Community Day Brasil 2021 Exhibition</a>
-        </p>
+Gostaria de dedicar esta obra à memória do meu pai, Alberto Siciliano Villares que faleceu recentemente, em dezembro de 2020, quando comecei a série de estudos que culminaram neste resultado.">Grade recursiva 2021-01-21</h1>
+<h2 style="font-size:12px">Presented at the <a href="https://pcd.encontrosdigitais.com.br/galeria/">Processsing Community Day Brasil 2021 Exhibition</a>
+</h2>
+<p>This work started with the exploration of a series of recursive grids in my <a href="https://abav.lugaralgum.com/sketch-a-day/">sketch-a-day</a> project. The theme/structure of the recursive grid has been a favorite idea of mine since I learned it from <a href="https://twitter.com/takawo">Takawo Shunsuke</a>, creative programmer from Japan, in 2019. It runs on your browser thanks to <a href="https://github.com/berinhard/pyp5js">pyp5js</a> pyodide mode.</p>
+<p>
+I would like to dedicate this work to the memory of my father, Alberto Siciliano Villares who passed away recently, in December 2020, when I started the series of studies that culminated in this result.
+</p>
+<p>
+ <a href="http://abav.lugaralgum.com">Alexandre B A Villares</a>
+</p>
+<span>
   </body>
   <script type="text/javascript">
 
