--- a/testing/pyscript/index.html
+++ b/testing/pyscript/index.html
@@ -10,7 +10,7 @@
 <div id='mydiv'></div>          
 <py-script>  
 mykey = str(1)    
-svgNS = "http://w3.org/2000/svg"     
+svgNS = "http://www.w3.org/2000/svg"     
 # svgelement = document.createElement('svg')
 svgelement = document.createElementNS(svgNS, 'svg')    
 svgelement.setAttributeNS(None,"width","400px")   
