--- a/selected-work/near_grid_v2021_05/index.html
+++ b/selected-work/near_grid_v2021_05/index.html
@@ -9,7 +9,7 @@
     <title>near grid</title>
     <style> body, html, canvas {padding: 0; margin: 0; overflow: hidden;} </style>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src="https://pyodide-cdn2.iodide.io/v0.15.0/full/pyodide.js"></script>
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.18.1/full/pyodide.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
     <style>
         html {
