--- a/selected-work/LCCRMY_v2021_04_30/index.html
+++ b/selected-work/LCCRMY_v2021_04_30/index.html
@@ -1832,14 +1832,25 @@ def start_p5(setup_func, draw_func, event_functions):
 `;
 
 
-    languagePluginLoader.then(() => {
-        pyodide.runPython(`
-          import io, code, sys
-          from js import pyodide, p5, window, document
-          print(sys.version)
-        `)
-        runCode() 
-    });
+   async function main() {
+            const config = {
+                indexURL : "https://cdn.jsdelivr.net/pyodide/v0.18.1/full/",
+                fullStdLib: false,
+            }
+            window.pyodide = await loadPyodide(config);
+            // Pyodide is now ready to use...
+            console.log(window.pyodide.runPython(`
+                import io, code, sys
+                from js import p5, window, document
+                print(sys.version)
+          `));
+           window.runSketchCode = (code) => {
+              userCode = code;
+              runCode();
+            }
+
+            runCode();
+        };
 
     function runCode() {
         let userCode = $("#id_py_code").html();
@@ -1852,6 +1863,8 @@ def start_p5(setup_func, draw_func, event_functions):
         console.log("Output da execução:");
         pyodide.runPython(code);
     }
+    // async method
+    main();
 
 
     // var editor = ace.edit("text-editor");
