--- a/selected-work/grafos-2022-09/index.html
+++ b/selected-work/grafos-2022-09/index.html
@@ -52,18 +52,16 @@ from random import sample, seed, randint
 
 nodes = {}
 unvisited_nodes = []
-step = 6
 
 EVN_NBS = ((0, 1), (0, -1), (-1, 0), (1, 0), (-1, -1), (1, -1))
 ODD_NBS = ((0, 1), (0, -1), (-1, 0), (1, 0), (-1,  1), (1,  1))
 W = 6
 H = W * (3 ** 0.5) * 0.5
-nbs = []
 
 def setup():
     global w, h
     size(800, 800)
-    w, h = int(width / 2 / step - 5), int(height / 2 / step - 5)
+    w, h = int(width / 2 / W - 5), int(height / 2 / W - 5)
     start(268)
 
 def start(rnd_seed):
@@ -94,7 +92,6 @@ def draw():
             xb, yb = ij_to_xy(ib, jb)
             strokeWeight(max(1, 6 / sqrt(gen)))
             line(xa, ya, xb, yb)
-
     unvisited_nodes[:] = grow()
 
 def ij_to_xy(i, j):
@@ -105,9 +102,7 @@ def ij_to_xy(i, j):
     x = i * W * 1.5 + W
     return x, y
 
-
 def grow():
-    #new_nodes = []
     for i, j in unvisited_nodes:
         if not visible(i, j):
             continue
@@ -120,14 +115,12 @@ def grow():
             ini, jnj= i + ni, j + nj
             if (ini, jnj) not in nodes:
                 nodes[(ini, jnj)] = (i, j, c, gen + 1)
-                #new_nodes.append((ini, jnj))
                 yield ini, jnj
-    #return new_nodes
-    
+
 def visible(i, j):
     x, y = ij_to_xy(i, j) 
-    return (abs(x) < width / 2 - step * 5 and
-            abs(y) < height / 2 - step * 5)
+    return (abs(x) < width / 2 - W * 5 and
+            abs(y) < height / 2 - W * 5)
 
 def mousePressed(e):
         start(frameCount)
@@ -146,18 +139,16 @@ from random import sample, seed, randint
 
 nodes = {}
 unvisited_nodes = []
-step = 6
 
 EVN_NBS = ((0, 1), (0, -1), (-1, 0), (1, 0), (-1, -1), (1, -1))
 ODD_NBS = ((0, 1), (0, -1), (-1, 0), (1, 0), (-1,  1), (1,  1))
 W = 6
 H = W * (3 ** 0.5) * 0.5
-nbs = []
 
 def setup():
     global w, h
     size(800, 800)
-    w, h = int(width / 2 / step - 5), int(height / 2 / step - 5)
+    w, h = int(width / 2 / W - 5), int(height / 2 / W - 5)
     start(268)
 
 def start(rnd_seed):
@@ -188,7 +179,6 @@ def draw():
             xb, yb = ij_to_xy(ib, jb)
             strokeWeight(max(1, 6 / sqrt(gen)))
             line(xa, ya, xb, yb)
-
     unvisited_nodes[:] = grow()
 
 def ij_to_xy(i, j):
@@ -199,9 +189,7 @@ def ij_to_xy(i, j):
     x = i * W * 1.5 + W
     return x, y
 
-
 def grow():
-    #new_nodes = []
     for i, j in unvisited_nodes:
         if not visible(i, j):
             continue
@@ -214,14 +202,12 @@ def grow():
             ini, jnj= i + ni, j + nj
             if (ini, jnj) not in nodes:
                 nodes[(ini, jnj)] = (i, j, c, gen + 1)
-                #new_nodes.append((ini, jnj))
                 yield ini, jnj
-    #return new_nodes
     
 def visible(i, j):
     x, y = ij_to_xy(i, j) 
-    return (abs(x) < width / 2 - step * 5 and
-            abs(y) < height / 2 - step * 5)
+    return (abs(x) < width / 2 - W * 5 and
+            abs(y) < height / 2 - W * 5)
 
 def mousePressed(e):
         start(frameCount)
